Navbar done for desktop

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#" class="nav-link">Projets</a></li>
             </ul>
             <div>
-                <p class="call">+243 000 000 000</p>
+                <a href="tel:+243970946414" class="call"><i>#</i>+243 970 94 64 14</a>
             </div>
         </nav>
     </header>
