--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <header>
         <nav class="navbar">
+
+            <div class="mobile-icon">
+                <i aria-label="Menu" class="humburger">#</i>
+            </div>
+
             <a href="index.html" class="nav-brand">Albatros</a>
+
             <ul class="nav-menu">
                 <li><a href="#" class="nav-link active">Accueil</a></li>
                 <li><a href="#" class="nav-link">Services</a></li>
@@ -18,8 +24,13 @@
                 <li><a href="#" class="nav-link">Contacts</a></li>
                 <li><a href="#" class="nav-link">Projets</a></li>
             </ul>
+
             <div>
-                <a href="tel:+243970946414" class="call"><i>#</i>+243 970 94 64 14</a>
+                <a href="tel:+243970946414" class="call"><i aria-label="Appeler">#</i>+243 970 94 64 14</a>
+            </div>
+
+            <div class="mobile-icon humburger">
+                <i class="phone"># <a aria-label="Appeler le +243 970 94 64 14" href="tel:+243970946414"></a></i>
             </div>
         </nav>
     </header>
