Allow auto update years on footer

--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
                 <a href="tel:+243970946414" class="call"><i aria-label="Appeler">#</i>+243 970 94 64 14</a>
             </div>
 
-            <div class="mobile-icon humburger">
+            <div class="mobile-icon">
                 <i class="phone"># <a aria-label="Appeler le +243 970 94 64 14" href="tel:+243970946414"></a></i>
             </div>
         </nav>
     </header>
-    
+
+
+   
+        <script src="assets/js/app.js"></script>
 </body>
 </html>
