Add possibility to show/hide navmenu on mobile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#" class="nav-link">Projets</a></li>
 
                 <div class="mobile-icon contacts" aria-hidden="true">
-                    <p class="help-text">Pour toute préoccupation, n'hésitez pas à me contacter vie l'un des moyens ci-après.</p>
+                    <p class="help-text">Pour toute préoccupation, n'hésitez pas à me contacter via l'un des moyens ci-après.</p>
 
                     <div class="contacts-container">
                         <a href="#" aria-lebel="Phone"><i>#</i></a>
@@ -47,6 +47,11 @@
         </nav>
     </header>
 
+    <footer>
+        <div class="copyrights">
+            <p>&copy; <span class="years">2021</span> Albatros</p>
+        </div>
+    </footer>
 
    
         <script src="assets/js/app.js"></script>
