Add icons form font awesome and bootstrap

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albatros</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
         <nav class="navbar">
 
             <div class="mobile-icon" aria-hidden="true">
-                <i aria-label="Menu" class="humburger">#</i>
+                <i aria-label="Menu" class="humburger bi bi-list"></i>
             </div>
 
             <a href="index.html" class="nav-brand">Albatros</a>
@@ -28,10 +29,10 @@
                     <p class="help-text">Pour toute préoccupation, n'hésitez pas à me contacter via l'un des moyens ci-après.</p>
 
                     <div class="contacts-container">
-                        <a href="#" aria-lebel="Phone"><i>#</i></a>
-                        <a href="#" aria-lebel="Messenger"><i>#</i></a>
-                        <a href="#" aria-lebel="WhatsApp"><i>#</i></a>
-                        <a href="#" aria-lebel="E-mail"><i>#</i></a>
+                        <a href="#" aria-lebel="Phone"><i class="fa-solid fa-phone"></i></a>
+                        <a href="#" aria-lebel="Messenger"><i class="fa-brands fa-facebook-messenger"></i></a>
+                        <a href="#" aria-lebel="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="#" aria-lebel="E-mail"><i class="icon solid fa-envelope"></i></a>
                     </div>
                 </div>
               
@@ -42,7 +43,7 @@
             </div>
 
             <div class="mobile-icon"  aria-hidden="true" >
-                <i class="phone"># <a aria-label="Appeler le +243 970946414" href="tel:+243970946414"></a></i>
+                <i class="fa-solid fa-phone phone"></i><a aria-label="Appeler le +243 970946414" href="tel:+243970946414"></a></i>
             </div>
         </nav>
     </header>
