Starting with main content, skeleton in html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,55 @@
                 <i class="fa-solid fa-phone phone"></i><a aria-label="Appeler le +243 970946414" href="tel:+243970946414"></a></i>
             </div>
         </nav>
+
+        <div class="banner">
+            <p>Salut, mon nom est</p>
+            <h1><span>Didier Bashige</span><span>Abatros</span></h1>
+            <p>Designer professionnel de plusieurs années d'expérience dans ce domaine.</p>
+            <a href="#" class="btn btn-default">Me contacter</a>
+        </div>
     </header>
+
+    <main>
+        <section class="who-am-i">
+            <h2 class="main-title">Qui suis-je ?</h2>
+            <p class="description">Brève description</p>
+            <a href="#" class="btn btn-default">Télécharger mon CV</a>
+        </section>
+
+        <section class="contacts">
+            <div>
+                <p>
+                    <span>Avant de me confier votre projet,</span>
+                    <span>commençons par la prise de contacts ! Je reste joignable tous les jours de 6h à 22h
+                    </span>
+                    <span>Je vous généralement en 3 minutes maximum.</span>
+                </p>
+            </div>
+            <div>
+                <h2 class="main-title">Contacts</h2>
+
+                <div class="contacs-container">
+                    <a href="#"><span>+243 970 94 64 14</span><span>SMS et appels (des coûts de communication peuvent s'appliquer.)</span></a>
+                    <a href="#"><span>Messenger</span><span>Messages textes seulement</span></a>
+                    <a href="#"><span>WhatsApp</span><span>Message texte, vocal et appel audio</span></a>
+                    <a href="#"><span>mdidier4@gmail.com</span><span>Pas de spam</span></a>
+                </div>
+            </div>
+        </section>
+
+        <section class="statistics">
+            <h2 class="main-title">Les chiffres</h2>
+            <p class="description">Si j'étais une fonction mathématique, alors ma définition se resumérait par ces quelques chiffres</p>
+
+            <div class="container">
+                <p><span>7+</span><span>Plus de 7 ans d'expérience</span></p>
+                <p><span>20k</span><span>Plus de 20 mille projets finis</span></p>
+                <p><span>3min</span><span>C'est le temps maximum de réponse</span></p>
+            </div>
+        </section>
+
+    </main>
 
     <footer>
         <div class="copyrights">
