--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
         </nav>
 
         <div class="banner">
-            <p>Salut, mon nom est</p>
-            <h1><span>Didier Bashige</span><span>Abatros</span></h1>
-            <p>Designer professionnel de plusieurs années d'expérience dans ce domaine.</p>
-            <a href="#" class="btn btn-default">Me contacter</a>
+            <div class="banner-content">
+                <p class="salutation">Salut, mon nom est</p>
+                <h1><span>Albatros Alba</span><span>Abatros</span></h1>
+                <p>Designer professionnel de plusieurs années d'expérience dans ce domaine.</p>
+                <a href="#" class="btn btn-default">Me contacter</a>
+            </div>
         </div>
     </header>
 
