--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
                         <a href="#" aria-lebel="E-mail"><i class="icon solid fa-envelope"></i></a>
                     </div>
                 </div>
-              
             </ul>
 
             <div>
-                <a href="tel:+243970946414" class="phone-number" aria-label="Appeler le +243 970946414"><i>#</i>+243 970 94 64 14</a>
+                <a href="tel:+243970946414" class="phone-number" aria-label="Appeler le +243 970946414"><i class="fa-solid fa-phone"></i>+243 970 94 64 14</a>
             </div>
 
             <div class="mobile-icon"  aria-hidden="true" >
@@ -50,7 +49,7 @@
         <div class="banner">
             <div class="banner-content">
                 <p class="salutation">Salut, mon nom est</p>
-                <h1><span>Albatros Alba</span><span>Abatros</span></h1>
+                <h1><span>Didier Bashige</span><span>Albatros</span></h1>
                 <p>Designer professionnel de plusieurs années d'expérience dans ce domaine.</p>
                 <a href="#" class="btn btn-default">Me contacter</a>
             </div>
