Add logo and redesign nav-brand

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <i aria-label="Menu" class="humburger bi bi-list"></i>
             </div>
 
-            <a href="index.html" class="nav-brand">Albatros</a>
+            <a href="index.html" aria-label="Albatros design" class="nav-brand"><img src="./images/logo_albatros_design.png" alt="Logo Albatros Design">albatros design</a>
 
             <ul class="nav-menu">
                 <li><a href="#" class="nav-link active">Accueil</a></li>
@@ -59,11 +59,12 @@
     <main>
         <section class="who-am-i">
             <h2 class="main-title">Qui suis-je ?</h2>
-            <p class="description">Brève description</p>
+            <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste! Quam quos fuga delectus culpa repellendus? Libero assumenda maxime facilis, ullam repellendus cumque, pariatur amet ex, voluptas consequuntur perspiciatis.</p>
             <a href="#" class="btn btn-default">Télécharger mon CV</a>
         </section>
 
         <section class="contacts">
+            <h2 class="main-title">Contacts</h2>
             <div>
                 <p>
                     <span>Avant de me confier votre projet,</span>
@@ -73,7 +74,6 @@
                 </p>
             </div>
             <div>
-                <h2 class="main-title">Contacts</h2>
 
                 <div class="contacs-container">
                     <a href="#"><span>+243 970 94 64 14</span><span>SMS et appels (des coûts de communication peuvent s'appliquer.)</span></a>
