Who am i section done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <header>
         <nav class="navbar">
-
             <div class="mobile-icon" aria-hidden="true">
                 <i aria-label="Menu" class="humburger bi bi-list"></i>
             </div>
@@ -59,9 +58,13 @@
 
     <main>
         <section class="who-am-i">
-            <h2 class="main-title">Qui suis-je ?</h2>
-            <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste! Quam quos fuga delectus culpa repellendus? Libero assumenda maxime facilis, ullam repellendus cumque, pariatur amet ex, voluptas consequuntur perspiciatis.</p>
-            <a href="#" class="btn btn-default">Télécharger mon CV</a>
+            <div class="left-side">
+                <h2 class="main-title">Qui suis-je ?</h2>
+                <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
+                <a href="#" class="btn btn-default">Télécharger mon CV</a>
+            </div>
+
+            <div class="right-side">Content</div>
         </section>
 
         <section class="contacts">
