Refactor section layout

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
 
     <main>
-        <section class="who-am-i">
+        <section class="who-am-i container">
             <div class="left-side">
                 <h2 class="main-title">Qui suis-je ?</h2>
                 <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
@@ -67,18 +67,17 @@
             <div class="right-side">Content</div>
         </section>
 
-        <section class="contacts">
-            <h2 class="main-title">Contacts</h2>
-            <div>
+        <section class="contacts container">
+            <div class="left-side">
                 <p>
                     <span>Avant de me confier votre projet,</span>
-                    <span>commençons par la prise de contacts ! Je reste joignable tous les jours de 6h à 22h
+                    <span>Commençons par la prise de contacts ! Je reste joignable tous les jours de 6h à 22h
                     </span>
-                    <span>Je vous généralement en 3 minutes maximum.</span>
+                    <span>et je vous généralement en 3 minutes maximum.</span>
                 </p>
             </div>
-            <div>
-
+            <div class="right-side">
+                <h2 class="main-title">Contacts</h2>
                 <div class="contacs-container">
                     <a href="#"><span>+243 970 94 64 14</span><span>SMS et appels (des coûts de communication peuvent s'appliquer.)</span></a>
                     <a href="#"><span>Messenger</span><span>Messages textes seulement</span></a>
