--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
 
     <main>
-        <section class="who-am-i container">
+        <!-- <section class="who-am-i container">
             <div class="left-side">
                 <h2 class="main-title">Qui suis-je ?</h2>
                 <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="right-side">Content</div>
-        </section>
+        </section> -->
 
         <section class="contacts container">
             <div class="left-side">
@@ -78,8 +78,16 @@
             </div>
             <div class="right-side">
                 <h2 class="main-title">Contacts</h2>
-                <div class="contacs-container">
-                    <a href="#"><span>+243 970 94 64 14</span><span>SMS et appels (des coûts de communication peuvent s'appliquer.)</span></a>
+                <p class="description">Sentez vous libre de me contacter par appel ou sms, par Facebook Messenger, par WhatsApp ou encore par mail, selon votre préférence !</p>
+
+                <div class="contacts-list">
+                    <div class="contacts-list-icons-container">
+                        <i>#</i>
+                        <i>#</i>
+                        <i>#</i>
+                        <i>#</i>
+                    </div>
+                    <a href="tel:+243 970 94 64 14"><span>+243 970 94 64 14</span><span>SMS et appels (des coûts peuvent s'appliquer)</span></a>
                     <a href="#"><span>Messenger</span><span>Messages textes seulement</span></a>
                     <a href="#"><span>WhatsApp</span><span>Message texte, vocal et appel audio</span></a>
                     <a href="#"><span>mdidier4@gmail.com</span><span>Pas de spam</span></a>
