Statistics section done

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     </header>
 
     <main>
-        <!-- <section class="who-am-i container">
+        <section class="who-am-i container">
             <div class="left-side">
                 <h2 class="main-title">Qui suis-je ?</h2>
                 <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
                 <a href="#" class="btn btn-default">Télécharger mon CV</a>
             </div>
 
-            <div class="right-side">Content</div>
-        </section> -->
+            <div class="right-side"></div>
+        </section>
 
         <section class="contacts container">
             <div class="left-side">
@@ -87,9 +87,9 @@
                         <i>#</i>
                         <i>#</i>
                     </div>
-                    <a href="tel:+243 970 94 64 14"><span>+243 970 94 64 14</span><span>SMS et appels (des coûts peuvent s'appliquer)</span></a>
+                    <a href="tel:+243 970 94 64 14"><span>+243 970 94 64 14</span><span>SMS ou appel (des coûts peuvent s'appliquer)</span></a>
                     <a href="#"><span>Messenger</span><span>Messages textes seulement</span></a>
-                    <a href="#"><span>WhatsApp</span><span>Message texte, vocal et appel audio</span></a>
+                    <a href="#"><span>WhatsApp</span><span>Message texte, message vocal ou appel audio</span></a>
                     <a href="#"><span>mdidier4@gmail.com</span><span>Pas de spam</span></a>
                 </div>
             </div>
@@ -99,10 +99,20 @@
             <h2 class="main-title">Les chiffres</h2>
             <p class="description">Si j'étais une fonction mathématique, alors ma définition se resumérait par ces quelques chiffres</p>
 
-            <div class="container">
-                <p><span>7+</span><span>Plus de 7 ans d'expérience</span></p>
-                <p><span>20k</span><span>Plus de 20 mille projets finis</span></p>
-                <p><span>3min</span><span>C'est le temps maximum de réponse</span></p>
+            <div class="stats-container">
+                <div class="stat">
+                    <p>7+</p>
+                    <p>Plus de 7 ans d'expérience</p>
+                </div>
+                <div class="stat">
+                    <p>20k</p>
+                    <p>Plus de 20 mille projets finis</p>
+                </div>
+                <div class="stat">
+                    <p>3min</p>
+                    <p>C'est le temps maximum de réponse</p>
+                </div>
+          
             </div>
         </section>
 
@@ -113,8 +123,7 @@
             <p>&copy; <span class="years">2021</span> Albatros</p>
         </div>
     </footer>
-
    
-        <script src="assets/js/app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
