Services section done

--- a/index.html
+++ b/index.html
@@ -116,6 +116,44 @@
             </div>
         </section>
 
+        <section class="services">
+            <h1 class="main-title">Services</h1>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nisi autem nam ex laborum sequi pariatur laudantium corporis beatae rerum.</p>
+
+            <div class="services-container">
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Graphic Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Web Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">UI / UX Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Graphic Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Web Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">UI / UX Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
