Add actioin button in services section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
             </div>
+
+            <a href="#" class="btn btn-default">Me contacter</a>
         </section>
 
     </main>
