Utils section done

--- a/index.html
+++ b/index.html
@@ -156,6 +156,46 @@
             <a href="#" class="btn btn-default">Me contacter</a>
         </section>
 
+        <section class="utils" id="utils">
+            <h2 class="main-title">Mes outils</h2>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi maiores non culpa commodi molestias minus eligendi placeat explicabo quis a.</p>
+
+            <div class="utils-container">
+                <div class="util">
+                    <div class="header">
+                        <h3>Photoshop</h3>
+                        <i>#</i>
+                    </div>
+                    <div class="progressbar">
+                        <div class="progress-value photoshop"></div>
+                    </div>
+                    <p class="level">90%</p>
+                    <p class="utility">Avec un niveau de connaissance de l'outil estimé à 90%, je l'utilise pour la création graphique</p>
+                </div>
+                <div class="util">
+                    <div class="header">
+                        <h3>Illustrator</h3>
+                        <i>#</i>
+                    </div>
+                    <div class="progressbar">
+                        <div class="progress-value illustrator"></div>
+                    </div>
+                    <p class="level">85%</p>
+                    <p class="utility">Avec une telle maîtrise, mon outil de prédilection pour la conception de logos</p>
+                </div>
+                <div class="util">
+                    <div class="header">
+                        <h3>Figma</h3>
+                        <i>#</i>
+                    </div>
+                    <div class="progressbar">
+                        <div class="progress-value figma"></div>
+                    </div>
+                    <p class="level">92%</p>
+                    <p class="utility">C'est mon préféré en concetption et prototypage des interfaces utilisateur web et app</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
