Tabmenu done for projects section

--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
                 </div>
             </div>
         </section>
+
+        <section class="projects">
+            <h1 class="main-title">Projets en vedette</h1>
+            <p class="description">Avec plus de 7 ans d'expérience et plus de 20 mille projets réalisés, voici mes projets en vedette, les plus recents...</p>
+
+            <div class="tabs-container">
+                <button class="tab active">Tous</button>
+                <button class="tab">Graphic Design</button>
+                <button class="tab">Web Design</button>
+                <button class="tab">UI / UX Design</button>
+                <button class="tab">Autres</button>
+            </div>
+        </section>
     </main>
 
     <footer>
