Working on project gallery

--- a/index.html
+++ b/index.html
@@ -208,6 +208,32 @@
                 <button class="tab">UI / UX Design</button>
                 <button class="tab">Autres</button>
             </div>
+
+            <ul class="gallery">
+                <li><img src="images/exemple/Logo Albatros Bleu.jpg" alt=""></li>
+                <li><img src="images/exemple/243970946414_status_eb2afe47fbb643308e59f13d654e1ed5.jpg" alt=""></li>
+                <li><img src="images/exemple/ANNIV EMMANUEL.jpg" alt=""></li>
+                <li><img src="images/exemple/ANNIV LAETITIA DG.jpg" alt=""></li>
+                <li><img src="images/exemple/ANNIV LOUISE.jpg" alt=""></li>
+                <li><img src="images/exemple/Home page - Desktop.png" alt=""></li>
+                <li><img src="images/exemple/banner.JPG" alt=""></li>
+                <li><img src="images/exemple/CLOE THEME 1.jpg" alt=""></li>
+                <li><img src="images/exemple/Anniv Rebecca.jpg" alt=""></li>
+                <li><img src="images/exemple/Goma le luxe chrismass.jpg" alt=""></li>
+                <li><img src="images/exemple/SAVE THE DATE DESMADEL.jpg" alt=""></li>
+                <li><img src="images/exemple/SEMAINE DE L'ENVIRONNEMENT ACNDC.jpg" alt=""></li>
+                <li><img src="images/exemple/Desktop - Home page.png" alt=""></li>
+                <li><img src="images/exemple/243970946414_status_70c5d2e721df43a3b43f3a7fd52ad6ac.jpg" alt=""></li>
+                <li><img src="images/exemple/AR Label Home Template.jpg" alt=""></li>
+                <li><img src="images/exemple/IMG-20221027-WA0026.jpg" alt=""></li>
+                <li><img src="images/exemple/IMG_9053.jpg" alt=""></li>
+                <li><img src="images/exemple/ANNIV JENNIFER.jpg" alt=""></li>
+                <li><img src="images/exemple/localhost_5500__radio=on&quantity=(iPad).png" alt=""></li>
+                <li><img src="images/exemple/localhost_5500__radio=on&quantity=2(iPhone 6_7_8 Plus).png" alt=""></li>
+                <li><img src="images/exemple/NGUVU TECH QUID.jpg" alt=""></li>
+                <li><img src="images/exemple/Screenshot (20221103-102950)-1.jpg" alt=""></li>
+                <li><img src="images/exemple/Logo Albatros Black.jpg" alt=""></li>
+            </ul>
         </section>
     </main>
 
