--- a/index.html
+++ b/index.html
@@ -238,8 +238,17 @@
     </main>
 
     <footer>
+        <div class="social">
+            <p class="follow-invitation">Suivez-moi sur</p>
+            <div class="social-links">
+                <a href="#" aria-label="Facebook"><i>#</i></a>
+                <a href="#" aria-label="Instagram"><i>#</i></a>
+                <a href="#" aria-label="Twitter"><i>#</i></a>
+                <a href="#" aria-label="Youtube"><i>#</i></a>
+            </div>
+        </div>
         <div class="copyrights">
-            <p>&copy; <span class="years">2021</span> Albatros</p>
+            <p>&copy; <span class="years">2021</span> &bull; Albatros Design</p>
         </div>
     </footer>
    
