--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <a href="index.html" aria-label="Albatros design" class="nav-brand"><img src="./images/logo_albatros_design.png" alt="Logo Albatros Design">albatros design</a>
 
             <ul class="nav-menu">
-                <li><a href="#" class="nav-link active">Accueil</a></li>
-                <li><a href="#" class="nav-link">Services</a></li>
+                <li><a href="#accueil" class="nav-link active">Accueil</a></li>
+                <li><a href="#contacts" class="nav-link">Contacts</a></li>
                 <li><a href="#" class="nav-link">Compétences</a></li>
-                <li><a href="#" class="nav-link">Contacts</a></li>
-                <li><a href="#" class="nav-link">Projets</a></li>
+                <li><a href="#services" class="nav-link">Services</a></li>
+                <li><a href="#projects" class="nav-link">Projets</a></li>
 
                 <div class="mobile-icon contacts" aria-hidden="true">
                     <p class="help-text">Pour toute préoccupation, n'hésitez pas à me contacter via l'un des moyens ci-après.</p>
@@ -57,7 +57,7 @@
     </header>
 
     <main>
-        <section class="who-am-i container">
+        <section class="who-am-i container" id="accueil">
             <div class="left-side">
                 <h2 class="main-title">Qui suis-je ?</h2>
                 <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
@@ -67,7 +67,7 @@
             <div class="right-side"></div>
         </section>
 
-        <section class="contacts container">
+        <section class="contacts container" id="contacts">
             <div class="left-side">
                 <p>
                     <span>Avant de me confier votre projet,</span>
@@ -95,69 +95,8 @@
             </div>
         </section>
 
-        <section class="statistics">
-            <h2 class="main-title">Les chiffres</h2>
-            <p class="description">Si j'étais une fonction mathématique, alors ma définition se resumérait par ces quelques chiffres</p>
-
-            <div class="stats-container">
-                <div class="stat">
-                    <p>7+</p>
-                    <p>Plus de 7 ans d'expérience</p>
-                </div>
-                <div class="stat">
-                    <p>20k</p>
-                    <p>Plus de 20 mille projets finis</p>
-                </div>
-                <div class="stat">
-                    <p>3min</p>
-                    <p>C'est le temps maximum de réponse</p>
-                </div>
-          
-            </div>
-        </section>
-
-        <section class="services">
-            <h1 class="main-title">Services</h1>
-            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nisi autem nam ex laborum sequi pariatur laudantium corporis beatae rerum.</p>
-
-            <div class="services-container">
-                <div class="service">
-                    <i>#</i>
-                    <h3 class="service-name">Graphic Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service">
-                    <i>#</i>
-                    <h3 class="service-name">Web Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service">
-                    <i>#</i>
-                    <h3 class="service-name">UI / UX Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service">
-                    <i>#</i>
-                    <h3 class="service-name">Graphic Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service">
-                    <i>#</i>
-                    <h3 class="service-name">Web Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-                <div class="service">
-                    <i>#</i>
-                    <h3 class="service-name">UI / UX Design</h3>
-                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
-                </div>
-            </div>
-
-            <a href="#" class="btn btn-default">Me contacter</a>
-        </section>
-
-        <section class="utils" id="utils">
-            <h2 class="main-title">Mes outils</h2>
+        <section class="utils" id="competences">
+            <h2 class="main-title">Compétences</h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi maiores non culpa commodi molestias minus eligendi placeat explicabo quis a.</p>
 
             <div class="utils-container">
@@ -197,7 +136,67 @@
             </div>
         </section>
 
-        <section class="projects">
+        <section class="statistics">
+            <h2 class="main-title">Les chiffres</h2>
+            <p class="description">Si j'étais une fonction mathématique, alors ma définition se resumérait par ces quelques chiffres</p>
+
+            <div class="stats-container">
+                <div class="stat">
+                    <p>7+</p>
+                    <p>Plus de 7 ans d'expérience</p>
+                </div>
+                <div class="stat">
+                    <p>20k</p>
+                    <p>Plus de 20 mille projets finis</p>
+                </div>
+                <div class="stat">
+                    <p>3min</p>
+                    <p>C'est le temps maximum de réponse</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="services" id="services">
+            <h1 class="main-title">Services</h1>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nisi autem nam ex laborum sequi pariatur laudantium corporis beatae rerum.</p>
+
+            <div class="services-container">
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Graphic Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Web Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">UI / UX Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Graphic Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">Web Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+                <div class="service">
+                    <i>#</i>
+                    <h3 class="service-name">UI / UX Design</h3>
+                    <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
+                </div>
+            </div>
+
+            <a href="#" class="btn btn-default">Me contacter</a>
+        </section>
+
+        <section class="projects" id="projects">
             <h1 class="main-title">Projets en vedette</h1>
             <p class="description">Avec plus de 7 ans d'expérience et plus de 20 mille projets réalisés, voici mes projets en vedette, les plus recents...</p>
 
