--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="./images/logo_albatros_design.png">
 </head>
 <body>
-    <header>
+    <header id="accueil">
         <nav class="navbar">
             <div class="mobile-icon" aria-hidden="true">
                 <i aria-label="Menu" class="humburger bi bi-list"></i>
@@ -21,7 +21,7 @@
             <ul class="nav-menu">
                 <li><a href="#accueil" class="nav-link active">Accueil</a></li>
                 <li><a href="#contacts" class="nav-link">Contacts</a></li>
-                <li><a href="#" class="nav-link">Compétences</a></li>
+                <li><a href="#competences" class="nav-link">Compétences</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#projects" class="nav-link">Projets</a></li>
 
@@ -57,11 +57,11 @@
     </header>
 
     <main>
-        <section class="who-am-i container" id="accueil">
+        <section class="who-am-i container">
             <div class="left-side">
                 <h2 class="main-title">Qui suis-je ?</h2>
-                <p class="description">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
-                <a href="#" class="btn btn-default">Télécharger mon CV</a>
+                <p class="description obs">Brève description Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laborum voluptatem incidunt odio maxime facilis? Pariatur magni non dolorem repellendus adipisci alias odio iusto ullam corporis, placeat consequuntur soluta, cumque iste!</p>
+                <a href="#" class="btn btn-default obs">Télécharger mon CV</a>
             </div>
 
             <div class="right-side"></div>
@@ -80,7 +80,7 @@
                 <h2 class="main-title">Contacts</h2>
                 <p class="description">Sentez vous libre de me contacter par appel ou sms, par Facebook Messenger, par WhatsApp ou encore par mail, selon votre préférence !</p>
 
-                <div class="contacts-list">
+                <div class="contacts-list obs">
                     <div class="contacts-list-icons-container">
                         <i>#</i>
                         <i>#</i>
@@ -100,7 +100,7 @@
             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi maiores non culpa commodi molestias minus eligendi placeat explicabo quis a.</p>
 
             <div class="utils-container">
-                <div class="util">
+                <div class="util obs">
                     <div class="header">
                         <h3>Photoshop</h3>
                         <i>#</i>
@@ -111,7 +111,7 @@
                     <p class="level">90%</p>
                     <p class="utility">Avec un niveau de connaissance de l'outil estimé à 90%, je l'utilise pour la création graphique</p>
                 </div>
-                <div class="util">
+                <div class="util obs">
                     <div class="header">
                         <h3>Illustrator</h3>
                         <i>#</i>
@@ -122,7 +122,7 @@
                     <p class="level">85%</p>
                     <p class="utility">Avec une telle maîtrise, mon outil de prédilection pour la conception de logos</p>
                 </div>
-                <div class="util">
+                <div class="util obs">
                     <div class="header">
                         <h3>Figma</h3>
                         <i>#</i>
@@ -141,15 +141,15 @@
             <p class="description">Si j'étais une fonction mathématique, alors ma définition se resumérait par ces quelques chiffres</p>
 
             <div class="stats-container">
-                <div class="stat">
+                <div class="stat obs">
                     <p>7+</p>
                     <p>Plus de 7 ans d'expérience</p>
                 </div>
-                <div class="stat">
+                <div class="stat obs">
                     <p>20k</p>
                     <p>Plus de 20 mille projets finis</p>
                 </div>
-                <div class="stat">
+                <div class="stat obs">
                     <p>3min</p>
                     <p>C'est le temps maximum de réponse</p>
                 </div>
@@ -161,39 +161,39 @@
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nisi autem nam ex laborum sequi pariatur laudantium corporis beatae rerum.</p>
 
             <div class="services-container">
-                <div class="service">
+                <div class="service obs">
                     <i>#</i>
                     <h3 class="service-name">Graphic Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
-                <div class="service">
+                <div class="service obs">
                     <i>#</i>
                     <h3 class="service-name">Web Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
-                <div class="service">
+                <div class="service obs">
                     <i>#</i>
                     <h3 class="service-name">UI / UX Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
-                <div class="service">
+                <div class="service obs">
                     <i>#</i>
                     <h3 class="service-name">Graphic Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
-                <div class="service">
+                <div class="service obs">
                     <i>#</i>
                     <h3 class="service-name">Web Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
-                <div class="service">
+                <div class="service obs">
                     <i>#</i>
                     <h3 class="service-name">UI / UX Design</h3>
                     <p class="service-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam mollitia consequuntur quia sint delectus impedit ad, amet, asperiores beatae facere, dolorum iste praesentium. Excepturi, odio.</p>
                 </div>
             </div>
 
-            <a href="#" class="btn btn-default">Me contacter</a>
+            <a href="#" class="btn btn-default obs">Me contacter</a>
         </section>
 
         <section class="projects" id="projects">
