Trying to auto update activ naclink

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav-menu">
                 <li><a href="#accueil" class="nav-link active">Accueil</a></li>
                 <li><a href="#contacts" class="nav-link">Contacts</a></li>
-                <li><a href="#competences" class="nav-link">Compétences</a></li>
+                <li><a href="#competences" class="nav-link competences">Compétences</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#projects" class="nav-link">Projets</a></li>
 
