Add hover animation on buttons

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
             </div>
 
-            <a href="#" class="btn btn-default obs">Me contacter</a>
+            <a href="#" class="btn btn-bordered obs">Me contacter</a>
         </section>
 
         <section class="projects" id="projects">
