Add href to links

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <p class="help-text">Pour toute préoccupation, n'hésitez pas à me contacter via l'un des moyens ci-après.</p>
 
                     <div class="contacts-container">
-                        <a href="#" aria-lebel="Phone"><i class="fa-solid fa-phone"></i></a>
-                        <a href="#" aria-lebel="Messenger"><i class="fa-brands fa-facebook-messenger"></i></a>
-                        <a href="#" aria-lebel="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="#" aria-lebel="E-mail"><i class="icon solid fa-envelope"></i></a>
+                        <a href="call:+243 970 94 64 14" aria-lebel="Phone"><i class="fa-solid fa-phone"></i></a>
+                        <a href="https://m.me/Albatros" aria-lebel="Messenger"><i class="fa-brands fa-facebook-messenger"></i></a>
+                        <a href="https://wa.me/243970946414" aria-lebel="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="mailto:mdidierbashige4@gmail.com" aria-lebel="E-mail"><i class="icon solid fa-envelope"></i></a>
                     </div>
                 </div>
             </ul>
@@ -51,7 +51,7 @@
                 <p class="salutation">Salut, mon nom est</p>
                 <h1><span>Didier Bashige</span><span>Albatros</span></h1>
                 <p>Designer professionnel de plusieurs années d'expérience dans ce domaine.</p>
-                <a href="#" class="btn btn-default">Me contacter</a>
+                <a href="#contacts" class="btn btn-default">Me contacter</a>
             </div>
         </div>
     </header>
@@ -88,9 +88,9 @@
                         <i>#</i>
                     </div>
                     <a href="tel:+243 970 94 64 14"><span>+243 970 94 64 14</span><span>SMS ou appel (des coûts peuvent s'appliquer)</span></a>
-                    <a href="#"><span>Messenger</span><span>Messages textes seulement</span></a>
-                    <a href="#"><span>WhatsApp</span><span>Message texte, message vocal ou appel audio</span></a>
-                    <a href="#"><span>mdidier4@gmail.com</span><span>Pas de spam</span></a>
+                    <a href="https://m.me/Albatros"><span>Messenger</span><span>Messages textes seulement</span></a>
+                    <a href="https://wa.me/243970946414"><span>WhatsApp</span><span>Message texte, message vocal ou appel audio</span></a>
+                    <a href="mailto:mdidierbashige4@gmail.com"><span>mdidierbashige4@gmail.com</span><span>Pas de spam</span></a>
                 </div>
             </div>
         </section>
@@ -193,7 +193,7 @@
                 </div>
             </div>
 
-            <a href="#" class="btn btn-bordered obs">Me contacter</a>
+            <a href="#contacts" class="btn btn-bordered obs">Me contacter</a>
         </section>
 
         <section class="projects" id="projects">
@@ -240,10 +240,10 @@
         <div class="social">
             <p class="follow-invitation">Suivez-moi sur</p>
             <div class="social-links">
-                <a href="#" aria-label="Facebook"><i>#</i></a>
-                <a href="#" aria-label="Instagram"><i>#</i></a>
-                <a href="#" aria-label="Twitter"><i>#</i></a>
-                <a href="#" aria-label="Youtube"><i>#</i></a>
+                <a aria-label="Facebook" href="https://www.facebook.com/Art-Revolution-Label-107910888138657"><i class="fa-brands fa-facebook-f"></i></a>
+                <a aria-label="Instagram" href="https://instagram.com/artrevolutionl?utm_medium=copy_link"><i class="fa-brands fa-instagram"></i></a>
+                <a aria-label="Youtube" href="https://www.youtube.com/channel/UCRnwPS0AwVfhcGamWB5c2Vw"><i class="fa-brands fa-youtube"></i></a>
+                <a aria-label="Twitter" href="https://twitter.com/ArtrevolutionL?s=20&t=Ki69INw9lkm3wDQhJ8QK5w"><i class="fa-brands fa-twitter"></i></i></a>
             </div>
         </div>
         <div class="copyrights">
