--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                 <a href="#" class="btn btn-default obs">Télécharger mon CV</a>
             </div>
 
-            <div class="right-side"></div>
+            <div class="right-side">
+
+                <img src="" alt="">
+            </div>
         </section>
 
         <section class="contacts container" id="contacts">
