--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albatros design</title>
+    <meta name="description" content="Salut, mon nom est Didier Bashige Albatros, DEsigner professionnel de plusieurs années d'expérience">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" type="image/png" href="./images/logo_albatros_design.png">
+    <link rel="shortcut icon" type="image/png" href="./images/logo_albatros_design_small.png">
 </head>
 <body>
     <header id="accueil">
@@ -16,7 +17,7 @@
                 <i aria-label="Menu" class="humburger bi bi-list"></i>
             </div>
 
-            <a href="index.html" aria-label="Albatros design" class="nav-brand"><img src="./images/logo_albatros_design.png" alt="Logo Albatros Design">albatros design</a>
+            <a href="index.html" aria-label="Accueil Albatros design" class="nav-brand"><img src="./images/logo_albatros_design.png" alt="Logo Albatros Design"></a>
 
             <ul class="nav-menu">
                 <li><a href="#accueil" class="nav-link active">Accueil</a></li>
