--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     <p class="help-text">Pour toute préoccupation, n'hésitez pas à me contacter via l'un des moyens ci-après.</p>
 
                     <div class="contacts-container">
-                        <a href="call:+243 970 94 64 14" aria-lebel="Phone"><i class="fa-solid fa-phone"></i></a>
-                        <a href="https://m.me/Albatros" aria-lebel="Messenger"><i class="fa-brands fa-facebook-messenger"></i></a>
-                        <a href="https://wa.me/243970946414" aria-lebel="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="mailto:mdidierbashige4@gmail.com" aria-lebel="E-mail"><i class="icon solid fa-envelope"></i></a>
+                        <a href="call:+243 970 94 64 14" aria-lebel="Phone"><i class="phone fa-solid fa-phone"></i></a>
+                        <a href="https://m.me/Albatros" aria-lebel="Messenger"><i class="messenger fa-brands fa-facebook-messenger"></i></a>
+                        <a href="https://wa.me/243970946414" aria-lebel="WhatsApp"><i class="whatsapp fa-brands fa-whatsapp"></i></a>
+                        <a href="mailto:mdidierbashige4@gmail.com" aria-lebel="E-mail"><i class="mail icon solid fa-envelope"></i></a>
                     </div>
                 </div>
             </ul>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="mobile-icon"  aria-hidden="true" >
-                <i class="fa-solid fa-phone phone"></i><a aria-label="Appeler le +243 970946414" href="tel:+243970946414"></a></i>
+                <a aria-label="Appeler le +243 970946414" href="tel:+243970946414"><i class="fa-solid fa-phone phone"></i></a>
             </div>
         </nav>
 
@@ -66,8 +66,7 @@
             </div>
 
             <div class="right-side">
-
-                <img src="" alt="">
+                <img src="https://cdn-icons-png.flaticon.com/512/2779/2779775.png" alt="Illustration d'un graphique">
             </div>
         </section>
 
@@ -213,6 +212,7 @@
             </div>
 
             <ul class="gallery">
+
                 <li class="graphic"><img src="images/exemple/Logo Albatros Bleu.jpg" alt=""></li>
                 <li class="graphic"><img src="images/exemple/243970946414_status_eb2afe47fbb643308e59f13d654e1ed5.jpg" alt=""></li>
                 <li class="graphic"><img src="images/exemple/ANNIV EMMANUEL.jpg" alt=""></li>
@@ -244,10 +244,10 @@
         <div class="social">
             <p class="follow-invitation">Suivez-moi sur</p>
             <div class="social-links">
-                <a aria-label="Facebook" href="https://www.facebook.com/Art-Revolution-Label-107910888138657"><i class="fa-brands fa-facebook-f"></i></a>
-                <a aria-label="Instagram" href="https://instagram.com/artrevolutionl?utm_medium=copy_link"><i class="fa-brands fa-instagram"></i></a>
-                <a aria-label="Youtube" href="https://www.youtube.com/channel/UCRnwPS0AwVfhcGamWB5c2Vw"><i class="fa-brands fa-youtube"></i></a>
-                <a aria-label="Twitter" href="https://twitter.com/ArtrevolutionL?s=20&t=Ki69INw9lkm3wDQhJ8QK5w"><i class="fa-brands fa-twitter"></i></i></a>
+                <a aria-label="Facebook" href="https://www.facebook.com/Art-Revolution-Label-107910888138657"><i class=" facebook fa-brands fa-facebook-f"></i></a>
+                <a aria-label="Instagram" href="https://instagram.com/artrevolutionl?utm_medium=copy_link"><i class="instagram fa-brands fa-instagram"></i></a>
+                <a aria-label="Youtube" href="https://www.youtube.com/channel/UCRnwPS0AwVfhcGamWB5c2Vw"><i class="youtube fa-brands fa-youtube"></i></a>
+                <a aria-label="Twitter" href="https://twitter.com/ArtrevolutionL?s=20&t=Ki69INw9lkm3wDQhJ8QK5w"><i class="twitter fa-brands fa-twitter"></i></a>
             </div>
         </div>
         <div class="copyrights">
