Change contacts icons into bulls

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
                 <div class="contacts-list obs">
                     <div class="contacts-list-icons-container">
-                        <i>#</i>
-                        <i>#</i>
-                        <i>#</i>
-                        <i>#</i>
+                        <i>&bull;</i>
+                        <i>&bull;</i>
+                        <i>&bull;</i>
+                        <i>&bull;</i>
                     </div>
                     <a href="tel:+243 970 94 64 14"><span>+243 970 94 64 14</span><span>SMS ou appel (des coûts peuvent s'appliquer)</span></a>
                     <a href="https://m.me/Albatros"><span>Messenger</span><span>Messages textes seulement</span></a>
